k8s/expiration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-expiration-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-expiration
  template:
    metadata:
      labels:
        app: ticketing-expiration
    spec:
      containers:
        - name: ticketing-expiration
          image: adhupraba/ticketing-expiration
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"
