k8s/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-auth
  template:
    metadata:
      labels:
        app: ticketing-auth
    spec:
      containers:
        - name: ticketing-auth
          image: adhupraba/ticketing-auth
          ports:
            - containerPort: 6001
              protocol: TCP
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-auth-svc
spec:
  selector:
    app: ticketing-auth
  ports:
    - port: 6001
      targetPort: 6001
      protocol: TCP
