k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-client-depl
spec:
  selector:
    matchLabels:
      app: ticketing-client
  template:
    metadata:
      labels:
        app: ticketing-client
    spec:
      containers:
        - name: ticketing-client
          image: adhupraba/ticketing-client
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-client-svc
spec:
  selector:
    app: ticketing-client
  ports:
    - port: 3000
      targetPort: 3000
