k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-orders-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-orders
  template:
    metadata:
      labels:
        app: ticketing-orders
    spec:
      containers:
        - name: ticketing-orders
          image: adhupraba/ticketing-orders
          ports:
            - containerPort: 6003
              protocol: TCP
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-orders-svc
spec:
  selector:
    app: ticketing-orders
  ports:
    - port: 6003
      targetPort: 6003
      protocol: TCP
