k8s/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-payments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-payments
  template:
    metadata:
      labels:
        app: ticketing-payments
    spec:
      containers:
        - name: ticketing-payments
          image: adhupraba/ticketing-payments
          ports:
            - containerPort: 6004
              protocol: TCP
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-payments-svc
spec:
  selector:
    app: ticketing-payments
  ports:
    - port: 6004
      targetPort: 6004
      protocol: TCP
