k8s/tickets-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets-mongo
  template:
    metadata:
      labels:
        app: ticketing-tickets-mongo
    spec:
      containers:
        - name: ticketing-tickets-mongo
          image: mongo
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-mongo-svc
spec:
  selector:
    app: ticketing-tickets-mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
