k8s/tickets.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticketing-tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticketing-tickets
  template:
    metadata:
      labels:
        app: ticketing-tickets
    spec:
      containers:
        - name: ticketing-tickets
          image: adhupraba/ticketing-tickets
          ports:
            - containerPort: 6002
              protocol: TCP
          resources:
            limits:
              memory: "200Mi"
              cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: ticketing-tickets-svc
spec:
  selector:
    app: ticketing-tickets
  ports:
    - port: 6002
      targetPort: 6002
      protocol: TCP
